--- a/docker-compose_save.yaml
+++ b/docker-compose_save.yaml
@@ -5,8 +5,7 @@ x-airflow-common:
   build:
     context: airflow
     args:
-      AIRFLOW_IMAGE: apache/airflow:2.1.0
-      version: ${VERSION}
+      AIRFLOW_IMAGE: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.1.0}
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -22,9 +21,11 @@ x-airflow-common:
     AIRFLOW_CONN_REDCAP_HSCN: '${AIRFLOW_CONN_REDCAP_HSCN}'
     AIRFLOW_CONN_IDENTITY: '${AIRFLOW_CONN_IDENTITY}'
     AIRFLOW_CONN_DWH: '${AIRFLOW_CONN_DWH}'
-    AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: '${AIRFLOW__LOGGING__FAB_LOGGING_LEVEL:-ERROR}'
+    AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: 'DEBUG'
   volumes:
+    - ${DAG_DIRECTORY}:/opt/airflow/dags
     - ${LOG_DIRECTORY}:/opt/airflow/logs
+    - ${PLUGINS_DIRECTORY}:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
 
 services:
