--- a/example.env
+++ b/example.env
@@ -2,5 +2,15 @@ AIRFLOW_UID=1000
 AIRFLOW_GID=0
 AIRFLOW_DB_URL=XXXXXXXXXXXXXXXXXXXXXXXXXXX
 AIRFLOW__CELERY__BROKER_URL=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+AIRFLOW__CELERY__DEFAULT_QUEUE=XXXXXXXXXXXXXXXXXXXXXXXXXXX
 _AIRFLOW_WWW_USER_USERNAME=XXXXXXXXXXXXXXXXXXXXXXXXXXX
 _AIRFLOW_WWW_USER_PASSWORD=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+AIRFLOW__CORE__LOAD_EXAMPLES=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Directories
+DAG_DIRECTORY=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+LOG_DIRECTORY=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+PLUGINS_DIRECTORY=XXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Web
+PORT=XXXXXXXXXXXXXXXXXXXXXXXXXXX
