--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ x-airflow-common:
   build:
     context: airflow
     args:
-      AIRFLOW_IMAGE: apache/airflow:2.2.3
+      AIRFLOW_IMAGE: apache/airflow:${AIRFLOW_VERSION}-python${AIRFLOW_PYTHON_VERSION}
+      AIRFLOW_VERSION: ${AIRFLOW_VERSION}
+      AIRFLOW_PYTHON_VERSION: ${AIRFLOW_PYTHON_VERSION}
       version: ${VERSION}
   environment:
     &airflow-common-env
@@ -21,11 +23,12 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     AIRFLOW_CONN_REDCAP_HSCN: '${AIRFLOW_CONN_REDCAP_HSCN}'
     AIRFLOW_CONN_IDENTITY: '${AIRFLOW_CONN_IDENTITY}'
+    AIRFLOW_CONN_LIVE_DB: '${AIRFLOW_CONN_LIVE_DB}'
     AIRFLOW_CONN_DWH: '${AIRFLOW_CONN_DWH}'
+    AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME: '${AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME}'
+    AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD: '${AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD}'
+    AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD: '${AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD}'
     AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: '${AIRFLOW__LOGGING__FAB_LOGGING_LEVEL:-ERROR}'
-    ETL_DOWNLOAD_USERNAME: '${ETL_DOWNLOAD_USERNAME}'
-    ETL_DOWNLOAD_PASSWORD: '${ETL_DOWNLOAD_PASSWORD}'
-    ETL_ENCRYPTION_PASSWORD: '${ETL_ENCRYPTION_PASSWORD}'
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
