--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ x-airflow-common:
     AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD: '${AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD}'
     AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD: '${AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD}'
     AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: '${AIRFLOW__LOGGING__FAB_LOGGING_LEVEL:-ERROR}'
+    SCHEDULE_LOAD_WAREHOUSE: '${SCHEDULE_LOAD_WAREHOUSE}'
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
