--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,14 +25,24 @@ x-airflow-common:
     AIRFLOW_CONN_IDENTITY: '${AIRFLOW_CONN_IDENTITY}'
     AIRFLOW_CONN_LIVE_DB: '${AIRFLOW_CONN_LIVE_DB}'
     AIRFLOW_CONN_DWH: '${AIRFLOW_CONN_DWH}'
+    AIRFLOW_CONN_ETL_CENTRAL: '${AIRFLOW_CONN_ETL_CENTRAL}'
     AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME: '${AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME}'
     AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD: '${AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD}'
     AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD: '${AIRFLOW_VAR_ETL_ENCRYPTION_PASSWORD}'
+    AIRFLOW_VAR_EDGE_USERNAME: '${AIRFLOW_VAR_EDGE_USERNAME}'
+    AIRFLOW_VAR_EDGE_PASSWORD: '${AIRFLOW_VAR_EDGE_PASSWORD}'
+    AIRFLOW_VAR_EDGE_BASE_URL: '${AIRFLOW_VAR_EDGE_BASE_URL}'
+    AIRFLOW_VAR_CRFM_USERNAME: '${AIRFLOW_VAR_CRFM_USERNAME}'
+    AIRFLOW_VAR_CRFM_PASSWORD: '${AIRFLOW_VAR_CRFM_PASSWORD}'
+    AIRFLOW_VAR_CRFM_BASE_URL: '${AIRFLOW_VAR_CRFM_BASE_URL}'
     AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: '${AIRFLOW__LOGGING__FAB_LOGGING_LEVEL:-ERROR}'
     SCHEDULE_LOAD_WAREHOUSE: '${SCHEDULE_LOAD_WAREHOUSE}'
+    LBRC_SELENIUM_HOST: '${LBRC_SELENIUM_HOST}'
+    LBRC_SELENIUM_DOWNLOAD_DIRECTORY: '/opt/airflow/downloads'
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
+    - ${DOWNLOAD_DIRECTORY}:/opt/airflow/downloads
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
 
 services:
