--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,11 @@ x-airflow-common:
     SCHEDULE_LOAD_WAREHOUSE: '${SCHEDULE_LOAD_WAREHOUSE}'
     LBRC_SELENIUM_HOST: '${LBRC_SELENIUM_HOST}'
     LBRC_SELENIUM_DOWNLOAD_DIRECTORY: '/opt/airflow/downloads'
+    AIRFLOW__SMTP__SMTP_HOST: '${AIRFLOW__SMTP__SMTP_HOST}'
+    AIRFLOW__SMTP__SMTP_PORT: '${AIRFLOW__SMTP__SMTP_PORT}'
+    AIRFLOW__SMTP__SMTP_USER: '${AIRFLOW__SMTP__SMTP_USER}'
+    AIRFLOW__SMTP__SMTP_PASSWORD: '${AIRFLOW__SMTP__SMTP_PASSWORD}'
+    AIRFLOW__SMTP__SMTP_MAIL_FROM: '${AIRFLOW__SMTP__SMTP_MAIL_FROM}'
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
