--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_USER: '${AIRFLOW__SMTP__SMTP_USER}'
     AIRFLOW__SMTP__SMTP_PASSWORD: '${AIRFLOW__SMTP__SMTP_PASSWORD}'
     AIRFLOW__SMTP__SMTP_MAIL_FROM: '${AIRFLOW__SMTP__SMTP_MAIL_FROM}'
+    AIRFLOW__SMTP__SMTP_STARTTLS: False
+    AIRFLOW__SMTP__SMTP_SSL: False
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
