--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ x-airflow-common:
     AIRFLOW_CONN_IDENTITY: '${AIRFLOW_CONN_IDENTITY}'
     AIRFLOW_CONN_LIVE_DB: '${AIRFLOW_CONN_LIVE_DB}'
     AIRFLOW_CONN_DWH: '${AIRFLOW_CONN_DWH}'
+    AIRFLOW_CONN_UHLDWH: '${AIRFLOW_CONN_UHLDWH}'
     AIRFLOW_CONN_ETL_CENTRAL: '${AIRFLOW_CONN_ETL_CENTRAL}'
     AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME: '${AIRFLOW_VAR_ETL_DOWNLOAD_USERNAME}'
     AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD: '${AIRFLOW_VAR_ETL_DOWNLOAD_PASSWORD}'
