--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_STARTTLS: 'False'
     AIRFLOW__SMTP__SMTP_SSL: 'False'
     AIRFLOW__EMAIL__FROM_EMAIL: 'richard.a.bramley@uhl-tr.nhs.uk'
+    ERROR_EMAIL_ADDRESS: '${ERROR_EMAIL_ADDRESS}'
   volumes:
     - ${LOG_DIRECTORY}:/opt/airflow/logs
     - ${DAG_DIRECTORY}:/opt/airflow/dags
