Pass on error email address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_USER: '${AIRFLOW__SMTP__SMTP_USER}'
     AIRFLOW__SMTP__SMTP_PASSWORD: '${AIRFLOW__SMTP__SMTP_PASSWORD}'
     AIRFLOW__SMTP__SMTP_MAIL_FROM: '${AIRFLOW__SMTP__SMTP_MAIL_FROM}'
-    AIRFLOW__SMTP__SMTP_STARTTLS: 'False'
+    AIRFLOW__SMTP__SMTP_STARTTLS: 'True'
     AIRFLOW__SMTP__SMTP_SSL: 'False'
     AIRFLOW__EMAIL__FROM_EMAIL: 'richard.a.bramley@uhl-tr.nhs.uk'
     ERROR_EMAIL_ADDRESS: '${ERROR_EMAIL_ADDRESS}'
