Add replicant DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ x-airflow-common:
     AIRFLOW_CONN_REDCAP_HSCN: '${AIRFLOW_CONN_REDCAP_HSCN}'
     AIRFLOW_CONN_IDENTITY: '${AIRFLOW_CONN_IDENTITY}'
     AIRFLOW_CONN_LIVE_DB: '${AIRFLOW_CONN_LIVE_DB}'
+    AIRFLOW_CONN_REPLICANT_DB: '${AIRFLOW_CONN_REPLICANT_DB}'
     AIRFLOW_CONN_DWH: '${AIRFLOW_CONN_DWH}'
     AIRFLOW_CONN_UHLDWH: '${AIRFLOW_CONN_UHLDWH}'
     AIRFLOW_CONN_ETL_CENTRAL: '${AIRFLOW_CONN_ETL_CENTRAL}'
@@ -40,6 +41,9 @@ x-airflow-common:
     SCHEDULE_LOAD_WAREHOUSE: '${SCHEDULE_LOAD_WAREHOUSE}'
     LBRC_SELENIUM_HOST: '${LBRC_SELENIUM_HOST}'
     LBRC_SELENIUM_DOWNLOAD_DIRECTORY: '/opt/airflow/downloads'
+    AIRFLOW__SCHEDULER__MIN_FILE_PROCESS_INTERVAL: 120
+    AIRFLOW__SCHEDULER__SCHEDULER_MAX_THREADS: 1
+    AIRFLOW__SCHEDULER__SCHEDULER_HEARTBEAT_SEC: 2
     AIRFLOW__SMTP__SMTP_HOST: '${AIRFLOW__SMTP__SMTP_HOST}'
     AIRFLOW__SMTP__SMTP_PORT: '${AIRFLOW__SMTP__SMTP_PORT}'
     AIRFLOW__SMTP__SMTP_USER: '${AIRFLOW__SMTP__SMTP_USER}'
