--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -3,6 +3,7 @@ flask-appbuilder
 apache-airflow-providers-microsoft-mssql
 plyvel
 selenium
+jsonlines
 sqlalchemy
 -e git+https://github.com/LCBRU/lbrc_selenium.git@main#egg=lbrc_selenium
 -e git+https://github.com/LCBRU/lbrc_edge.git@main#egg=lbrc_edge
