--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ x-airflow-common:
     AIRFLOW_VAR_CRFM_BASE_URL: '${AIRFLOW_VAR_CRFM_BASE_URL}'
     AIRFLOW__LOGGING__FAB_LOGGING_LEVEL: '${AIRFLOW__LOGGING__FAB_LOGGING_LEVEL:-ERROR}'
     SCHEDULE_LOAD_WAREHOUSE: '${SCHEDULE_LOAD_WAREHOUSE}'
+    SCHEDULE_REPLICATE: '${SCHEDULE_REPLICATE}'
     LBRC_SELENIUM_HOST: '${LBRC_SELENIUM_HOST}'
     LBRC_SELENIUM_DOWNLOAD_DIRECTORY: '/opt/airflow/downloads'
     DOWNLOAD_DIRECTORY: '/opt/airflow/downloads'
